# local-en-stt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  startup_whisper.sh  whisper_hotkey.py
.github/: ISSUE_TEMPLATE.md
app/: file_utils.py  whisper_hotkey.py
app/ui/: gui_implementation.py  terminal_implementation.py  ui_interface.py
docs/: index.md  installation.md  usage.md
src/local_en_stt/: __init__.py  cli.py  local_en_stt.py
tests/: __init__.py  test_local_en_stt.py
